--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ REACT_APP_PREVIEW_URL=https://preview.keenthemes.com/metronic8/react/demo1/
 REACT_APP_PREVIEW_REACT_URL=https://preview.keenthemes.com/metronic8/react
 REACT_APP_PREVIEW_DOCS_URL=https://preview.keenthemes.com/metronic8/react/docs
 REACT_APP_THEME_API_URL=https://preview.keenthemes.com/theme-api/api
-REACT_APP_SERVER_URL=http://localhost:4000/home/
+REACT_APP_SERVER_URL=https://sea-turtle-app-mo4go.ondigitalocean.app/home/
