--- a/.env
+++ b/.env
@@ -13,6 +13,5 @@ REACT_APP_PREVIEW_REACT_URL=https://preview.keenthemes.com/metronic8/react
 REACT_APP_PREVIEW_DOCS_URL=https://preview.keenthemes.com/metronic8/react/docs
 REACT_APP_THEME_API_URL=https://preview.keenthemes.com/theme-api/api
 REACT_APP_SERVER_URL2=http://localhost:8080/home/
-
-
+REACT_APP_SERVER_TOMTOM_API ='jGLOAW8p4cm75mgVAHfwDjDADWQo4iOs'
 REACT_APP_SERVER_URL=https://sea-turtle-app-mo4go.ondigitalocean.app/home/
