--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-free": "6.1.1",
     "@popperjs/core": "2.11.6",
     "@tomtom-international/web-sdk-maps": "^6.23.0",
+    "@tomtom-international/web-sdk-services": "^6.23.0",
     "@turf/turf": "^6.5.0",
     "animate.css": "4.1.1",
     "apexcharts": "3.35.0",
