--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-copy-to-clipboard": "5.1.0",
     "react-dom": "18.0.0",
     "react-geolocated": "^4.0.3",
+    "react-html5-camera-photo": "^1.5.11",
     "react-inlinesvg": "3.0.0",
     "react-intl": "5.25.0",
     "react-query": "3.38.0",
@@ -55,6 +56,7 @@
     "@types/react": "18.0.6",
     "@types/react-copy-to-clipboard": "5.0.2",
     "@types/react-dom": "18.0.2",
+    "@types/react-html5-camera-photo": "^1.5.1",
     "@types/react-table": "^7.7.9",
     "@types/sass-loader": "8.0.3",
     "css-loader": "6.7.1",
