--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,35 @@
+
 {
-  "short_name": "Metronic React App",
-  "name": "Metronic React App demo1",
-  "start_url": "."
+  "short_name": "ODC.ME",
+  "name": "ODC.ME",
+  "icons": [
+    {
+      "src": "/media/logos/icons/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/media/logos/icons/manifest-icon-192.maskable.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/media/logos/icons/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/media/logos/icons/manifest-icon-512.maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#000000",
+  "background_color": "#ffffff"
 }
