--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 
 {
-  "short_name": "ODC.ME",
-  "name": "ODC.ME",
+  "short_name": "QuickSurveyME",
+  "name": "QuickSurveyME",
   "icons": [
     {
       "src": "/media/logos/icons/manifest-icon-192.maskable.png",
